Rework front page experience to provide more detail and stop wrapping.

--- a/SpartanClash/wwwroot/css/site.css
+++ b/SpartanClash/wwwroot/css/site.css
@@ -39,3 +39,7 @@
     overflow-y: auto; /* prevent horizontal scrollbar */
     overflow-x: hidden; /* add padding to account for vertical scrollbar */
 }
+
+.front-page-jumbotron {
+    min-width: 400px;
+}
